force-app/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <description>A single inspection of a medical facility (Account with the Medical_Facility record type).</description>
    <label>Inspection</label>
    <nameField>
        <displayFormat>INS-{000000}</displayFormat>
        <label>Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>