force-app/main/default/objects/Inspection__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Set automatically to today when a result status is chosen and the date is blank.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>