force-app/main/default/objects/Inspection__c/fields/Deficiency_Areas__c.field-meta.xml
<CustomField>
    <fullName>Deficiency_Areas__c</fullName>
    <description>Areas where deficiencies were cited. Shown on the public portal and aggregated on the National Insights page.</description>
    <inlineHelpText>Choose every area where a deficiency was cited. Leave blank when none were cited.</inlineHelpText>
    <label>Deficiency Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>Medication Storage</fullName>
            </value>
            <value>
                <fullName>Fire and Life Safety</fullName>
            </value>
            <value>
                <fullName>Staff Credentialing Records</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness</fullName>
            </value>
            <value>
                <fullName>Sterilization Logs</fullName>
            </value>
            <value>
                <fullName>Patient Records Privacy</fullName>
            </value>
            <value>
                <fullName>Equipment Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>