force-app/main/default/objects/Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned automatically from State_Assignment__mdt by facility state. Internal only.</description>
    <label>Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>