force-app/main/default/objects/Inspection__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <inlineHelpText>Internal only. Never shown on the public portal.</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>