force-app/main/default/objects/Inspection__c/fields/Public_Summary__c.field-meta.xml
<CustomField>
    <fullName>Public_Summary__c</fullName>
    <inlineHelpText>Shown on the public portal. Do not include patient or staff names.</inlineHelpText>
    <label>Public Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>