force-app/main/default/objects/Inspection__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <inlineHelpText>Inspection score from 0 to 100.</inlineHelpText>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>