force-app/main/default/objects/Inspection__c/validationRules/Scheduled_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Scheduled_Date__c)</errorConditionFormula>
    <errorDisplayField>Scheduled_Date__c</errorDisplayField>
    <errorMessage>Enter the date this inspection is scheduled for.</errorMessage>
</ValidationRule>