force-app/main/default/objects/Inspection__c/validationRules/Score_Between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Score__c)), OR(Score__c &lt; 0, Score__c &gt; 100))</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>Enter a score from 0 to 100.</errorMessage>
</ValidationRule>