force-app/main/default/objects/Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Inspection_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Inspector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>