force-app/main/default/objects/Inspection__c/listViews/Open_Inspections.listView-meta.xml
<ListView>
    <fullName>Open_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Inspection_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Inspector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled,In Progress</value>
    </filters>
    <label>Open Inspections</label>
</ListView>